syntax = "proto3";

option csharp_namespace = "ProductionService";

service GrpcProduction{
    rpc GetAllProducts (GetAllRequest) returns (ProductResponse);
}

message GetAllRequest {}

message GrpcProductModel{
    int32 productId = 1;
    string brand = 2;
    string model = 3;
    string cost = 4;
}

message ProductResponse {
    repeated GrpcProductModel product = 1;
}